--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^4.0.0",
+    "@ethersproject/providers": "^5.7.2",
     "@web3-react/coinbase-wallet": "^8.2.3",
     "@web3-react/core": "^8.2.3",
     "@web3-react/gnosis-safe": "^8.2.4",
@@ -20,7 +21,7 @@
     "@web3-react/walletconnect": "^8.2.3",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "bootstrap": "^5.3.3",
-    "ethers": "^6.12.1",
+    "ethers": "^5.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
